[package]
name = "cyclic_data_types"
version = "0.2.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/HasinZaman/cyclic_data_structures"
description = "Cyclic data types are series of structs, enums, types and functions to create a series of fast data types."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4.0"
ringbuffer = "0.11.1"
smallvec = "1.10.0"
circular-queue = "0.2.6"
arraydeque = "0.4"
arrayvec = "0.7.2"
ring_queue = "0.2.0"

[[bench]]
name = "list_benchmark"
harness = false
